--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -154,7 +154,7 @@
     "    \"\"\"\n",
     "    counter = Counter(text)\n",
     "    vocab = sorted(counter, key=counter.get, reverse=True)\n",
-    "    vocab_to_int = { word: i for i, word in enumerate(vocab, 1) }\n",
+    "    vocab_to_int = { word: i for i, word in enumerate(vocab) }\n",
     "    int_to_vocab = { i: word for word, i in vocab_to_int.items() }\n",
     "    return vocab_to_int, int_to_vocab\n",
     "\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -315,21 +315,17 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mazda/anaconda3/envs/py3/lib/python3.6/site-packages/ipykernel/__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
+      "TensorFlow Version: 1.0.0\n",
+      "Default GPU Device: /gpu:0\n"
      ]
     }
    ],
@@ -354,7 +350,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Input\n",
     "Implement the `get_inputs()` function to create TF Placeholders for the Neural Network.  It should create the following placeholders:\n",
@@ -367,13 +366,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_inputs():\n",
     "    \"\"\"\n",
@@ -381,7 +388,10 @@
     "    :return: Tuple (input, targets, learning rate)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None\n",
+    "    input_ = tf.placeholder(tf.int32, [None, None], name='input')\n",
+    "    targets = tf.placeholder(tf.int32, [None, None], name='targets')\n",
+    "    learning_rate = tf.placeholder(tf.float32, name=\"learning_rate\")\n",
+    "    return input_, targets, learning_rate\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -408,13 +418,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_init_cell(batch_size, rnn_size):\n",
     "    \"\"\"\n",
@@ -424,7 +442,13 @@
     "    :return: Tuple (cell, initialize state)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+    "    keep_prob = 0.5\n",
+    "    drop = tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob=keep_prob)\n",
+    "    lstm_layers = 2\n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([drop] * lstm_layers)\n",
+    "    initial_state = tf.identity(cell.zero_state(batch_size, tf.float32), name='initial_state')\n",
+    "    return cell,initial_state\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -446,13 +470,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_embed(input_data, vocab_size, embed_dim):\n",
     "    \"\"\"\n",
@@ -463,7 +495,9 @@
     "    :return: Embedded input.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    embedding = tf.Variable(tf.random_uniform((vocab_size, embed_dim), -1, 1))\n",
+    "    embed = tf.nn.embedding_lookup(embedding, input_data)\n",
+    "    return embed\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -489,13 +523,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def build_rnn(cell, inputs):\n",
     "    \"\"\"\n",
@@ -505,7 +547,9 @@
     "    :return: Tuple (Outputs, Final State)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    outputs, final_state = tf.nn.dynamic_rnn(cell, inputs, dtype=tf.float32)\n",
+    "    final_state = tf.identity(final_state, name='final_state')\n",
+    "    return outputs, final_state\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -532,13 +576,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def build_nn(cell, rnn_size, input_data, vocab_size):\n",
     "    \"\"\"\n",
@@ -550,7 +602,12 @@
     "    :return: Tuple (Logits, FinalState)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    embed_dim = 300\n",
+    "    embed = get_embed(input_data, vocab_size, embed_dim)\n",
+    "    cell, initial_state = get_init_cell(tf.shape(input_data)[0], rnn_size)\n",
+    "    outputs, final_state = build_rnn(cell, embed)\n",
+    "    logits = tf.contrib.layers.fully_connected(outputs, num_outputs=vocab_size, activation_fn=None)\n",
+    "    return logits, final_state\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -597,13 +654,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[ 1  2  3]\n",
+      "   [ 7  8  9]]\n",
+      "\n",
+      "  [[ 2  3  4]\n",
+      "   [ 8  9 10]]]\n",
+      "\n",
+      "\n",
+      " [[[ 4  5  6]\n",
+      "   [10 11 12]]\n",
+      "\n",
+      "  [[ 5  6  7]\n",
+      "   [11 12 13]]]]\n",
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_batches(int_text, batch_size, seq_length):\n",
     "    \"\"\"\n",
@@ -614,8 +691,23 @@
     "    :return: Batches as a Numpy array\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    batch_seq_length = batch_size * seq_length\n",
+    "    num_batches = len(int_text) // batch_seq_length\n",
+    "    if num_batches * batch_seq_length + 1 >= len(int_text):\n",
+    "        num_batches -= 1\n",
+    "    batches = []\n",
+    "    for i in range(num_batches):\n",
+    "        batch_input = []\n",
+    "        batch_targets = []\n",
+    "        for j in range(batch_size):\n",
+    "            begin = i * seq_length + j * num_batches * seq_length\n",
+    "            end = i * seq_length + j * num_batches * seq_length + seq_length\n",
+    "            batch_input.append(int_text[begin: end])\n",
+    "            batch_targets.append(int_text[begin + 1: end + 1])\n",
+    "        batches.append([batch_input, batch_targets])\n",
+    "    return np.array(batches)\n",
     "\n",
+    "print(get_batches([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15], 2, 3))\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -644,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -653,17 +745,17 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = None\n",
+    "num_epochs = 200\n",
     "# Batch Size\n",
-    "batch_size = None\n",
+    "batch_size = 256\n",
     "# RNN Size\n",
-    "rnn_size = None\n",
+    "rnn_size = 512\n",
     "# Sequence Length\n",
-    "seq_length = None\n",
+    "seq_length = 16\n",
     "# Learning Rate\n",
-    "learning_rate = None\n",
+    "learning_rate = 0.005\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = None\n",
+    "show_every_n_batches = 100\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -684,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -736,13 +828,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch   0 Batch    0/16   train_loss = 8.822\n",
+      "Epoch   6 Batch    4/16   train_loss = 5.536\n",
+      "Epoch  12 Batch    8/16   train_loss = 4.719\n",
+      "Epoch  18 Batch   12/16   train_loss = 3.964\n",
+      "Epoch  25 Batch    0/16   train_loss = 3.362\n",
+      "Epoch  31 Batch    4/16   train_loss = 2.920\n",
+      "Epoch  37 Batch    8/16   train_loss = 2.469\n",
+      "Epoch  43 Batch   12/16   train_loss = 2.146\n",
+      "Epoch  50 Batch    0/16   train_loss = 1.953\n",
+      "Epoch  56 Batch    4/16   train_loss = 1.803\n",
+      "Epoch  62 Batch    8/16   train_loss = 1.630\n",
+      "Epoch  68 Batch   12/16   train_loss = 1.439\n",
+      "Epoch  75 Batch    0/16   train_loss = 1.497\n",
+      "Epoch  81 Batch    4/16   train_loss = 1.262\n",
+      "Epoch  87 Batch    8/16   train_loss = 1.183\n",
+      "Epoch  93 Batch   12/16   train_loss = 1.075\n",
+      "Epoch 100 Batch    0/16   train_loss = 1.069\n",
+      "Epoch 106 Batch    4/16   train_loss = 1.143\n",
+      "Epoch 112 Batch    8/16   train_loss = 1.001\n",
+      "Epoch 118 Batch   12/16   train_loss = 0.878\n",
+      "Epoch 125 Batch    0/16   train_loss = 0.857\n",
+      "Epoch 131 Batch    4/16   train_loss = 0.853\n",
+      "Epoch 137 Batch    8/16   train_loss = 0.799\n",
+      "Epoch 143 Batch   12/16   train_loss = 0.727\n",
+      "Epoch 150 Batch    0/16   train_loss = 0.750\n",
+      "Epoch 156 Batch    4/16   train_loss = 0.718\n",
+      "Epoch 162 Batch    8/16   train_loss = 0.705\n",
+      "Epoch 168 Batch   12/16   train_loss = 0.684\n",
+      "Epoch 175 Batch    0/16   train_loss = 0.672\n",
+      "Epoch 181 Batch    4/16   train_loss = 0.652\n",
+      "Epoch 187 Batch    8/16   train_loss = 0.665\n",
+      "Epoch 193 Batch   12/16   train_loss = 0.600\n",
+      "Model Trained and Saved\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -790,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -817,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -857,13 +989,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_tensors(loaded_graph):\n",
     "    \"\"\"\n",
@@ -872,7 +1012,7 @@
     "    :return: Tuple (InputTensor, InitialStateTensor, FinalStateTensor, ProbsTensor)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None, None\n",
+    "    return map(loaded_graph.get_tensor_by_name, ['input:0', 'initial_state:0', 'final_state:0', 'probs:0'])\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -894,13 +1034,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def pick_word(probabilities, int_to_vocab):\n",
     "    \"\"\"\n",
@@ -910,7 +1058,7 @@
     "    :return: String of the predicted word\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    return int_to_vocab[np.argmax(probabilities)]\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -932,13 +1080,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "moe_szyslak:(tough) homer, ma don't let me offer his wife, lover in the plan.(sighs) but there's not ready to go away, but i didn't sell clean, and it was\" as\" you've been in the bottom of course. check and go guys down to talk.\n",
+      "moe_szyslak: let's get four years... well, ah, that's just gasoline and question, you were ratted it around.\n",
+      "barney_gumble: hey moe,-- it's twins of flowers, but uh, excuse me, i think woman.\n",
+      "homer_simpson: hey, homer, you can't win drink a good thing.\n",
+      "moe_szyslak: hey, check it on! and because they go down on my wife, ran?\" does those pointing his and our guest big english... arms stuff by bart!\n",
+      "barney_gumble: hey moe, you got an air... while i play his other head, is i hope he didn't be right.\n",
+      "lenny_leonard: pro and now are a good thing.\n",
+      "homer_simpson: yeah, it's all my undies.\n"
+     ]
+    }
+   ],
    "source": [
     "gen_length = 200\n",
     "# homer_simpson, moe_szyslak, or Barney_Gumble\n",
@@ -1016,7 +1179,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
