--- a/semi-supervised/semi-supervised_learning_2_solution.ipynb
+++ b/semi-supervised/semi-supervised_learning_2_solution.ipynb
@@ -428,6 +428,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {
     "collapsed": true
@@ -635,6 +644,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
